# maestro-spank-plugin

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
cmake/: MaestroDependencies.cmake
examples/: README.md  ghz.qasm  maestro.sh  maestro_array.sh  maestro_expectations.sh  maestro_gpu.sh  maestro_stabilizer.sh  maestro_tensor.sh  plugstack.conf  qft.qasm  run_directory.sh  teleport.qasm  test.qasm  test_expectations.obs
src/: CMakeLists.txt  Library.h  MaestroLib.hpp  Simulator.hpp  maestro_spank.h  maestro_spank_plugin.c  maestro_spank_plugin.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/mocks/: mock_spank.cpp  mock_spank_utils.h
tests/mocks/slurm/: slurm.h  spank.h
